# dl-midterm-project

./: .env.example  .gitignore  AGENTS.md  PROJECT_FOLDER_STRUCTURE.md  README.md  deep-research-report.md  pyproject.toml
artifacts/: README.md
configs/: backbones.yaml  dataset.yaml  default.yaml  experiments.yaml  report.yaml  report_assets.yaml  train.yaml
data/: README.md
docs/: COMMANDS.md  DATASET_AUDIT.md  DECISIONS.md  EVALUATION_PROTOCOL.md  PROJECT_CONTEXT.md
notebooks/: 00_colab_setup.ipynb  01_dataset_prepare.ipynb  01_prepare_dataset.ipynb  02_extract_features.ipynb  02_extract_frozen_features.ipynb  02b_mlp_hyperparam_search.ipynb  03_finetune_backbones.ipynb  04_extract_finetuned_features.ipynb  04_sprint4b_classaware.ipynb  04_sprint4f_augmented_finetuning.ipynb  04_sprint4h_targeted_finetuning.ipynb  04_sprint4k_image_balanced_sampler.ipynb  04_train_evaluate_export.ipynb  05_train_fusion_mlp_matrix.ipynb  06_evaluate_and_export_report_assets.ipynb  README.md
outputs/: README.md
report/: README.md  main.tex  references.bib
scripts/: aggregate_results.py  create_splits.py  evaluate_runs.py  evaluate_tta.py  extract_features.py  finetune_backbone.py  make_report_assets.py  make_submission_archive.py  prepare_dataset.py  run_autoresearch_ensemble.py  run_experiment_matrix.py  run_fusion_diagnostic.py  run_mlp_hyperparam_search.py  run_sprint4c_hparam_search.py  train_mlp.py
submission/: youtube_link.txt
tests/: test_config_loading.py  test_dataset_sprint1.py  test_fusion_shapes.py  test_metrics.py  test_representation_complementarity.py  (+11 more)
(+241 files in other folders)
