[project]
name = "dl-fusion"
version = "0.1.0"
description = "Multi-CNN feature extraction and fusion for image classification."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.9",
    "numpy>=1.26",
    "pandas>=2.2",
    "pillow>=10.4",
    "pyyaml>=6.0",
    "scikit-learn>=1.5",
    "seaborn>=0.13",
    "torch>=2.3",
    "torchvision>=0.18",
    "tqdm>=4.66",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29",
    "ruff>=0.8",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
